--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,11 +50,13 @@ jobs:
         python-version: '3.9'
 
     - name: Install Python dependencies
+      working-directory: .
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
     - name: Build complete package
+      working-directory: .
       run: python build_complete_package.py
 
     - name: Build Electron App
@@ -147,8 +149,8 @@ jobs:
         asset_content_type: application/octet-stream
 
     - name: Update version in package.json
+      working-directory: frontend
       run: |
-        cd frontend
         npm version ${{ github.ref_name }} --no-git-tag-version
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
