--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,6 +63,7 @@ jobs:
 
     - name: Install Python dependencies
       working-directory: .
+      shell: bash
       run: |
         python -m pip install --upgrade pip
         echo "Current working directory: $(pwd)"
@@ -87,6 +88,7 @@ jobs:
 
     - name: Build Electron App
       working-directory: frontend
+      shell: bash
       run: |
         # Build React app first
         npm run build
