Comprehensive fix: add shell: bash to workflow, robust Windows encoding handling, and safe_print fallback for emojis

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -80,6 +80,7 @@ jobs:
 
     - name: Build complete package
       working-directory: .
+      shell: bash
       run: python build_complete_package.py
 
     - name: Build Electron App
