--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -134,6 +134,41 @@ jobs:
       with:
         path: artifacts/
     
+    - name: Setup Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.9'
+    
+    - name: Extract version from tag
+      id: extract_version
+      run: |
+        # Extract version from tag (remove 'v' prefix)
+        VERSION=${GITHUB_REF#refs/tags/v}
+        echo "version=$VERSION" >> $GITHUB_OUTPUT
+        echo "Extracted version: $VERSION"
+    
+    - name: Update version in all components
+      run: |
+        # Install required packages
+        pip install pathlib2
+        
+        # Run version manager to update all components
+        python scripts/version_manager.py update-all
+        
+        # Verify version was updated
+        echo "Current VERSION file content:"
+        cat VERSION
+        
+        echo "Backend Cargo.toml version:"
+        grep "version = " backend/Cargo.toml
+        
+        echo "Frontend version.ts content:"
+        if [ -f "frontend/src/version.ts" ]; then
+          cat frontend/src/version.ts
+        else
+          echo "version.ts not found"
+        fi
+    
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
