--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -18,9 +18,11 @@ tokio = { version = "1.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
-# Data processing - simplified for initial build
+# Data processing - enhanced with DuckDB
 polars = { version = "0.50", features = ["lazy", "csv", "json", "parquet"] }
 ndarray = "0.16"
+# Enhanced SQLite with better performance features
+rusqlite = { version = "0.31", features = ["bundled"] }
 # datafusion = "49.0"  # Commented out for initial build
 
 # Database - simplified for initial build
