--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -45,6 +45,7 @@ dotenv = "0.15"
 chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "1.8", features = ["v4", "serde"] }
 futures = "0.3"
+lazy_static = "1.4"
 
 # Workflow engine - using custom implementation for now
 # temporal-sdk = "1.0"  # Not available, using custom workflow engine
